syntax = "proto3";
package wallet_api;
option go_package = "github.com/h-varmazyar/wallet/api/proto;walletApi";
import "api/proto/src/models.proto";

service TransactionService {
  rpc List (TransactionListReq) returns (Transactions);
}

message TransactionListReq {
  // @inject_tag: json:"wallet_id"
  string WalletID = 1;
}

message Transactions {
  // @inject_tag: json:"transactions"
  repeated Transaction Transactions = 1;
}